# waydroid_tweaks

./: .editorconfig  .gitignore  .gitpod.yml  .pre-commit-config.yaml  default.nix  flake.nix  main.py  package.nix  poetry.nix  pyproject.toml  python3-venv.nix  readme.md  run-interactive.sh  shell.nix
.github/workflows/: black.yml
modules/: android_id.py  fdroidpriv.py  gapps.py  hidestatusbar.py  houdini.py  magisk.py  microg.py  mitm.py  ndk.py  nodataperm.py  smartdock.py  widevine.py
stuff/: android_id.py  fdroidpriv.py  gapps.py  general.py  hidestatusbar.py  houdini.py  magisk.py  microg.py  mitm.py  ndk.py  nodataperm.py  smartdock.py  widevine.py
tools/: container.py  helper.py  images.py  logger.py
